fixed incorrect alignment

--- a/src/sass/tribe.scss
+++ b/src/sass/tribe.scss
@@ -487,7 +487,6 @@
         padding: 0 0.5rem 0 0;
       }
       tr td:last-child {
-        text-align: left;
         padding: 0 0 0 0.5rem;
       }
 
